--- a/pom.xml
+++ b/pom.xml
@@ -12,23 +12,39 @@
         <name>XUMUMI</name>
         <url>https://www.xumumi.com</url>
     </organization>
+    <licenses>
+        <license>
+            <name>GNU General Public License v3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0</url>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>XUMUMI</name>
+            <email>xumumi@outlook.com</email>
+            <timezone>+8</timezone>
+            <url>https://www.xumumi.com</url>
+        </developer>
+    </developers>
     <properties>
         <maven.compiler.source>9</maven.compiler.source>
         <maven.compiler.target>9</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <commons-lang.version>2.6</commons-lang.version>
         <jwt.version>3.15.0</jwt.version>
         <jackson.version>2.11.0</jackson.version>
         <servlet.version>4.0.1</servlet.version>
         <spring.version>5.4.5</spring.version>
     </properties>
-    <developers>
-        <developer>
-            <name>XUMUMI</name>
-            <email>xumumi@outlook.com</email>
-            <organization>XUMUMI</organization>
-            <organizationUrl>https://www.xumumi.com</organizationUrl>
-        </developer>
-    </developers>
+    <scm>
+        <connection>scm:git:git://github.com/XUMUMI/xumumi-system-security.git</connection>
+        <developerConnection>scm:git:git://github.com/XUMUMI/xumumi-system-security.git</developerConnection>
+        <url>https://github.com/XUMUMI/xumumi-system-security</url>
+    </scm>
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/XUMUMI/xumumi-system-security/issues</url>
+    </issueManagement>
     <dependencies>
         <dependency>
             <groupId>com.auth0</groupId>
@@ -62,4 +78,61 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>XUMUMI</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 </project>
